force-app/src/objects/CTCM__BulkpostSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CTCM__CashEntry_Batch_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <inlineHelpText>Batch size for bulk posting</inlineHelpText>
        <label>CashEntry Batch Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__Donotsendemailswithbatchresult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not send emails with batch result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Enable_CashEntry_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable CashEntry Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Enable_Journal_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Journal Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Enable_PIN_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable PIN Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Enable_Pin_Date_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Pin Date Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Enable_SIN_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable SIN Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Enable_Sin_Date_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Sin Date Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Enable_post_all__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable post all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Journal_Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>Batch size for bulk posting</inlineHelpText>
        <label>Journal Batch Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__Journal_Posting_Filter__c</fullName>
        <inlineHelpText>add additional filter. e.g.: &quot;AND c2g__Reference__c =&apos;Betaling op kantoor&apos; &quot;</inlineHelpText>
        <label>Journal Posting Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__PIN_Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>Batch size for bulk posting</inlineHelpText>
        <label>PIN Batch Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__PIN_Posting_Filter__c</fullName>
        <inlineHelpText>add additional filter. e.g.: &quot; AND c2g__InvoiceDate__c =THIS_MONTH &quot;</inlineHelpText>
        <label>PIN Posting Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__SIN_Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <inlineHelpText>Batch size for bulk posting</inlineHelpText>
        <label>SIN Batch Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__SIN_Posting_Filter__c</fullName>
        <inlineHelpText>add additional filter. e.g.: &quot; AND c2g__InvoiceDate__c =THIS_MONTH &quot;</inlineHelpText>
        <label>SIN Posting Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BulkpostSettings</label>
</CustomObject>